# bgclens

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
bgclens/: .env.example  .gitignore  README.md  design-bgclens-architecture.md  prd-bgcflow-postprocessing-layer.md  pyproject.toml
bgclens/bgclens/adapters/: csv_adapter.py  detect.py  duckdb_adapter.py
bgclens/bgclens/catalog/: registry.py
bgclens/bgclens/catalog/entries/: clustering.yaml  community_detection.yaml  diversity.yaml  enrichment.yaml  pca.yaml  pcoa.yaml  (+1 more)
bgclens/bgclens/compute/: __init__.py  advisor.py  cost_models.py  resources.py
bgclens/bgclens/core/: api.py  clusters.py  config.py  intent.py  provenance.py  session.py
bgclens/bgclens/interpret/: __init__.py  chat.py  facts.py  goals.py  guard.py  judge.py  llm.py  mentions.py  reduce.py  templates.py
bgclens/bgclens/literature/: __init__.py  cache.py  extract.py  openalex.py  provider.py  ranker.py
bgclens/bgclens/manufacturability/: __init__.py  features.py  profile.py
bgclens/bgclens/model/: __init__.py
bgclens/bgclens/report/: __init__.py  html_renderer.py  quarto.py  rocrate.py
bgclens/bgclens/validation/: __init__.py  bands.py  harness.py
bgclens/bgclens/viz/: __init__.py  recommend.py  render.py  theme.py
bgclens/bgclens_cli/: __main__.py
bgclens/bgclens_web/api/: main.py
bgclens/bgclens_web/frontend/: index.html
bgclens/tests/integration/: test_llm_goals.py  test_walking_skeleton.py  test_web_api.py
bgclens/tests/unit/: test_catalog.py  test_compute.py  test_csv_adapter.py  test_detect.py  test_intent.py  test_literature.py  test_manufacturability.py  test_model.py
(+95 files in other folders)
