[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "bgclens"
version = "0.1.0"
description = "Post-processing & interpretation layer for BGCFlow output"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "duckdb>=0.10",
    "pandas>=2.2",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "diskcache>=5.6",
    "psutil>=5.9",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "typer>=0.12",
    "click>=8.1",
    "rich>=13.7",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "matplotlib>=3.9",
    "markdown>=3.10.2",
]

[project.optional-dependencies]
bio = ["scikit-bio>=0.6"]
network = ["networkx>=3.3", "python-louvain>=0.16"]
llm = ["openai>=1.30"]
web = []   # frontend dist ships inside the wheel; no extra deps
all = ["bgclens[bio,network,llm,web]"]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx",   # for FastAPI test client
]

[project.scripts]
bgclens = "bgclens_cli.__main__:app"

[tool.hatch.build.targets.wheel]
packages = ["bgclens", "bgclens_cli", "bgclens_web"]

[tool.pytest.ini_options]
markers = [
    "bgcflow: requires BGCFlow + Snakemake + Linux (set BGCLENS_RUN_BGCFLOW=1)",
    "slow: long-running tests (BGCFlow pipeline, 30-120 min)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
